--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -169,3 +176,4 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+.aider*
