--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "kubernetes>=29.0.0",
     "click>=8.1.7",
     "loguru>=0.7.3",
+    "matplotlib>=3.10.0",
 ]
 
 [tool.hatch.version]
