--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,10 @@ description = "An voice controlled AI agent that manages your Kubernetes cluster
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "websockets>=12.0",
     "pyaudio>=0.2.14",
-    "numpy>=1.26.0",
-    "python-dotenv>=1.0.0",
-    "kubernetes>=29.0.0",
-    "click>=8.1.7",
-    "loguru>=0.7.3",
-    "matplotlib>=3.10.0",
+    "sounddevice>=0.5.1",
+    "speechrecognition>=3.14.0",
+    "websockets>=14.2",
 ]
 
 [tool.hatch.version]
