--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "An voice controlled AI agent that manages your Kubernetes cluster
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "kubernetes>=31.0.0",
     "pyaudio>=0.2.14",
     "sounddevice>=0.5.1",
     "speechrecognition>=3.14.0",
