--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dev = [
     "pytest-mock>=3.14.0",
 ]
 
+[project.scripts]
+kubewhisper = "kubewhisper.cli:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
