--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "speechrecognition>=3.14.0",
     "websockets>=14.2",
     "loguru>=0.7.2",
-    "PyYAML>=6.0.1",
+    "pyyaml>=6.0.1",
 ]
 
 [tool.hatch.version]
